Sonar Fixes (#2232)
Signed-off-by: Avgustin Marinov <Avgustin.Marinov@bosch.com>